screenshot footer no longer overlapping with screenshot

--- a/src/pages/Screenshot/screenshot.css
+++ b/src/pages/Screenshot/screenshot.css
@@ -91,7 +91,7 @@
   background-color: rgba(19,206,102,0.7);
   position: absolute;
   z-index: 10;
-  bottom: 10%;
+  bottom: 5%;
   left: -10%;
   transform: rotate(-5deg);
   transform-origin: bottom left;
@@ -133,10 +133,6 @@
 }
 
 .ScreenshotPage_footer {
-  background: rgba(255,255,255,0.98);
-  position: relative;
-  top: -25px;
-  border-radius: 20px;
   text-align: center;
   max-width: 1024px;
   margin: auto;
